--- a/about.html
+++ b/about.html
@@ -55,9 +55,9 @@ function myFUnction() {
 <!-- Load an icon library -->
 <body style="color: wheat;
 <diV class="about-content">
-<h2>About us</h2>
+<h2 style="font-size:10vw;">About us</h2>
 </div>
-<p>hasslodotcom <span id="dots">...</span><span id="more"> is an entertainment and blogs company,<br>
+<p style="font-size:5vw;">hasslodotcom <span id="dots">...</span><span id="more"> is an entertainment and blogs company,<br>
  which works to serve you with best content including trending memes, updates & gossips.<br>
  You are definitely going to have great time with us &#128151</span></p>
 <button onclick="myFunction()" id="myBtn">Read more</button>
