--- a/about.html
+++ b/about.html
@@ -81,5 +81,14 @@ function myFunction() {
 
 <div class="footer">
   <p>@copyrights reserved</p>
+ <p id="demo"></p>
+
+<script>
+var w = window.innerWidth;
+var h = window.innerHeight;
+
+var x = document.getElementById("demo");
+x.innerHTML = "Browser width: " + w + ", height: " + h + ".";
+</script>
 </body>
 </html>
