--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 </style>
 </head>
 <body>
-<h1 class="glow">HassloDotCom</h1>
+<h1>HassloDotCom</h1>
 <div class="topnav" id="myTopnav">
   <div id="my links">
   <a  href="./home.html" ><i class="fa fa-fw fa-home"></i>Home</a>
