--- a/home.html
+++ b/home.html
@@ -81,6 +81,7 @@ content="karanvir">
   text-align: center;
 }
   </style>  
+  <input type="text" name="search" placeholder="Search..">
 </head>
 <body onload="myFunction()" style="margin:0;">
 <div id="loader"></div>
