--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 <meta name="author"
 content="karanvir">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
+    <link rel="stylesheet" type="text/css" href="styles.css"">  
 <style>
 #myBtn {
   display: none; 
