--- a/contact.html
+++ b/contact.html
@@ -1,22 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<link rel="stylesheet"href="./css/style.css">
-<style>
-#send:link, send:visited {
-  background-color: white;
-  color: black;
-  padding: 15px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-}
+<link rel="stylesheet"href="./css/styles.css">
 
-#send:hover, send:active {
-  background-color: red;
-  color:white;
-}
-</style>
 </head>
 <body>
 <h1>HassloDotCom</h1>
