--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,21 @@
 <html>
 <head>
 <link rel="stylesheet"href="./css/styles.css">
+<style>
+#send:link, send:visited {
+  background-color: white;
+  color: black;
+  padding: 15px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
 
+#send:hover, send:active {
+  background-color: red;
+  color:white;
+}
+</style>
 </head>
 <body>
 <h1>HassloDotCom</h1>
