--- a/home.html
+++ b/home.html
@@ -113,7 +113,7 @@ function myFUnction() {
     <div class="column-66">
       <h1 class="xlarge-font"><b>The App</b></h1>
       <h1 class="large-font" style="color:MediumSeaGreen;"><b>Why buy it?</b></h1>
-      <p><span style="font-size:36px">Take photos like a pro.</span> paindi a fer dhakk champion.</p>
+      <p><span style="font-size:36px">This is my First Website.</span> Made to post Vlogs.</p>
       <button class="button">Download Application</button>
     </div>
     <div class="column-33">
@@ -131,7 +131,7 @@ function myFUnction() {
     <div class="column-66">
       <h1 class="xlarge-font"><b>Clarity</b></h1>
       <h1 class="large-font" style="color:red;"><b>Pixels, who?</b></h1>
-      <p><span style="font-size:24px">A revolution in resolution.</span> idda hi a fer.</p>
+      <p><span style="font-size:24px">hasslodotcom is for fun only.</span> There is nothing to take personal.</p>
       <button class="button" style="background-color:red">Read More</button>
     </div>
   </div>
@@ -143,7 +143,7 @@ function myFUnction() {
     <div class="column-66">
       <h1 class="xlarge-font"><b>The App</b></h1>
       <h1 class="large-font" style="color:MediumSeaGreen;"><b>Why buy it?</b></h1>
-      <p><span style="font-size:36px">Take photos like a pro.</span> krlo follow hun ta.</p>
+      <p><span style="font-size:36px">It will be live soon.</span> Just Wait.</p>
       <button class="button">Download Application</button>
     </div>
     <div class="column-33">
