--- a/home.html
+++ b/home.html
@@ -111,8 +111,8 @@ function myFUnction() {
 <div class="cntnr">
   <div class="row">
     <div class="column-66">
-      <h1 class="xlarge-font"><b>The App</b></h1>
-      <h1 class="large-font" style="color:MediumSeaGreen;"><b>Why buy it?</b></h1>
+      <h1 class="xlarge-font"><b>Hasslo</b></h1>
+      <h1 class="large-font" style="color:MediumSeaGreen;"><b> Made For Fun</b></h1>
       <p><span style="font-size:36px">This is my First Website.</span> Made to post Vlogs.</p>
       <button class="button">Download Application</button>
     </div>
@@ -129,8 +129,8 @@ function myFUnction() {
       <img src="/w3images/app5.jpg" alt="App" width="335" height="471">
     </div>
     <div class="column-66">
-      <h1 class="xlarge-font"><b>Clarity</b></h1>
-      <h1 class="large-font" style="color:red;"><b>Pixels, who?</b></h1>
+      <h1 class="xlarge-font"><b>Vlogs</b></h1>
+      <h1 class="large-font" style="color:red;"><b>Coming Soon....</b></h1>
       <p><span style="font-size:24px">hasslodotcom is for fun only.</span> There is nothing to take personal.</p>
       <button class="button" style="background-color:red">Read More</button>
     </div>
@@ -141,8 +141,8 @@ function myFUnction() {
 <div class="cntnr">
   <div class="row">
     <div class="column-66">
-      <h1 class="xlarge-font"><b>The App</b></h1>
-      <h1 class="large-font" style="color:MediumSeaGreen;"><b>Why buy it?</b></h1>
+      <h1 class="xlarge-font"><b> Countdown Starts here </b></h1>
+      <h1 class="large-font" style="color:MediumSeaGreen;"><b>3.....2....1....0</b></h1>
       <p><span style="font-size:36px">It will be live soon.</span> Just Wait.</p>
       <button class="button">Download Application</button>
     </div>
