--- a/home.html
+++ b/home.html
@@ -117,7 +117,7 @@ function myFUnction() {
       <button class="button">Download Application</button>
     </div>
     <div class="column-33">
-        <img src="./images/hasslodotcom.jpg" width="335" height="471">
+        <img src="./images/panjaab.jpg" width="335" height="471">
     </div>
   </div>
 </div>
