--- a/home.html
+++ b/home.html
@@ -111,8 +111,8 @@ function myFUnction() {
 <div class="cntnr">
   <div class="row">
     <div class="column-66">
-      <h1 class="xlarge-font"><b>Hasslo</b></h1>
-      <h1 class="large-font" style="color:MediumSeaGreen;"><b> Made For Fun</b></h1>
+      <h1 class="xlarge-font"><b>Welcome</b></h1>
+      <h1 class="large-font" style="color:MediumSeaGreen;"><b> To Panjaab</b></h1>
       <p><span style="font-size:36px">This is my First Website.</span> Made to post Vlogs.</p>
       <button class="button">Download Application</button>
     </div>
