--- a/home.html
+++ b/home.html
@@ -106,6 +106,16 @@ function myFUnction() {
 </script>
 </div>
 </div>
+<aside>
+  <dark-mode-toggle
+    id="dark-mode-toggle-1"
+    legend="Theme Switcher"
+    appearance="switch"
+    dark="Dark"
+    light="Light"
+    remember="Remember this"
+  ></dark-mode-toggle>
+</aside>
 <div style="text-align:center,padding-left:16px">
 <!-- The App Section -->
 <div class="cntnr">
