--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@
 <body>
 <div class="classic-2"></div>
 <div class="topnav" id="myTopnav">
+   <input class="search" type="text" value="Search..."><img id="mglass" src="search.png">
   <div id="my links">
   <a  href="./home.html" ><i class="fa fa-fw fa-home"></i>Home</a>
   <a class="active" href="#about" ><i class="fa fa-fw fa-info"></i>About</a>
