--- a/home.html
+++ b/home.html
@@ -106,16 +106,26 @@ function myFUnction() {
 </script>
 </div>
 </div>
-<aside>
-  <dark-mode-toggle
-    id="dark-mode-toggle-1"
-    legend="Theme Switcher"
-    appearance="switch"
-    dark="Dark"
-    light="Light"
-    remember="Remember this"
-  ></dark-mode-toggle>
-</aside>
+<title>Login</title>
+  <link rel="stylesheet" href="login-page.css">
+  <script defer src="login-page.js"></script>
+</head>
+
+<body>
+  <main id="main-holder">
+    <h1 id="login-header">Login</h1>
+    
+    <div id="login-error-msg-holder">
+      <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
+    </div>
+    
+    <form id="login-form">
+      <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
+      <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
+      <input type="submit" value="Login" id="login-form-submit">
+    </form>
+  
+  </main>
 <div style="text-align:center,padding-left:16px">
 <!-- The App Section -->
 <div class="cntnr">
