--- a/home.html
+++ b/home.html
@@ -112,20 +112,6 @@ function myFUnction() {
 </head>
 
 <body>
-  <main id="main-holder">
-    <h1 id="login-header">Login</h1>
-    
-    <div id="login-error-msg-holder">
-      <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
-    </div>
-    
-    <form id="login-form">
-      <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
-      <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
-      <input type="submit" value="Login" id="login-form-submit">
-    </form>
-  
-  </main>
 <div style="text-align:center,padding-left:16px">
 <!-- The App Section -->
 <div class="cntnr">
@@ -136,6 +122,18 @@ function myFUnction() {
       <p><span style="font-size:36px">This is my First Website.</span> Made to post Vlogs.</p>
       <button class="button">Download Application</button>
     </div>
+          <title>Login Form</title>
+    <link rel="stylesheet" href="Login Form.css">
+    <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
+  </head>
+  <body>
+    <form class="container" action="" method="GET">
+      <h1>LOGIN</h1>
+      <input type="text" name="" placeholder="Username">
+      <input type="password" name="" placeholder="Password">
+      <input type="submit" value="Login">
+    </form>
     <div class="column-33">
         <img src="./images/panjaab.jpg" width="335" height="471">
     </div>
