--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 }
 
 .classic-2::before {
-  content:"Hasslo Dot Com";
+  content:"The Panjaab";
   color:#0000;
   padding:0 5px;
   background:linear-gradient(135deg,#000 calc(50% - 0.5em),#fff 0 calc(50% + 0.5em),#000 0);
@@ -59,7 +59,7 @@ function myFUnction() {
 <diV class="about-content">
 <h2 style="font-size:6vw;">About us</h2>
 </div>
-<p style="font-size:3vw;">hasslodotcom <span id="dots">...</span><span id="more"> is an entertainment and blogs company,<br>
+<p style="font-size:3vw;">The Panjaab <span id="dots">...</span><span id="more"> is an entertainment and blogs company,<br>
  which works to serve you with best content including trending memes, updates & gossips.<br>
  You are definitely going to have great time with us &#128151</span></p>
 <button onclick="myFunction()" id="myBtn">Read more</button>
