--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<link rel="stylesheet"href="./css/styles.css">
+<link rel="stylesheet"href="./css/style.css">
 <style>
 #send:link, send:visited {
   background-color: white;
