--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet"href="./css/style.css">
+<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 #send:link, send:visited {
   background-color: white;
