--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,7 @@
   <a class="active" href="#contact"><i class="fa fa-fw fa-envelope"></i>Contact</a>
  <a href="javascript:void(0);" class="icon" onclick="myFUnction()">
     <i class="fa fa-bars"></i>
+	 	<title>Google Search bar</title>
    <div class="container">
 	
 		<div class="search_box">
