--- a/home.html
+++ b/home.html
@@ -61,9 +61,9 @@ content="karanvir">
 .animate-bottom {
   position: relative;
   -webkit-animation-name: animatebottom;
-  -webkit-animation-duration: 1s;
+  -webkit-animation-duration: 0.7s;
   animation-name: animatebottom;
-  animation-duration: 1s
+  animation-duration: 0.7s
 }
 
 @-webkit-keyframes animatebottom {
@@ -91,8 +91,8 @@ content="karanvir">
  <a href="./about.html"><i class="fa fa-fw fa-info"></i>About</a>
  <a href="./contact.html"><i class="fa fa-fw fa-envelope"></i>Contact</a>
     <input type="text" name="search" placeholder="Search..">
-                                                                   <title>Login Form</title>
-    <link rel="stylesheet" href="Login Form.css">
+    <title>Login Form</title>
+    <link rel="stylesheet" href="Form.css">
     <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
   </head>
